fix(manager): Find adapters using Class#isAssignableFrom()